--- a/_data/share.yml
+++ b/_data/share.yml
@@ -3,7 +3,7 @@
 
 platforms:
   - type: Twitter
-    icon: "fa-brands fa-square-x-twitter"
+    icon: "fa-brands fa-square-twitter"
     link: "https://twitter.com/intent/tweet?text=TITLE&url=URL"
 
   - type: Facebook
